[fuchsia] Pass allocation_size for Memory resources in Scenic

Scenic now expects allocation_size to be set for VMOs. That parameter
wasn't set in chromium, so Scenic would fail when trying to use VMOs for
images.

Bug: 899922

Change-Id: I73c7c7dfa4d4a5e9ba76774c4b69d8125add05c2
Reviewed-on: https://chromium-review.googlesource.com/c/1306174
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Reviewed-by: Kevin Marshall <kmarshall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603634}
Former-commit-id: cfff248c8b3f02b8eebdead375329533b88118f6